--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ license = "MIT OR Apache-2.0"
 esp32c3-hal = "0.7.0"
 esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
 riscv-rt = { version = "0.11", optional = true }
+smart-leds = "0.3.0"
+ws2812-timer-delay = "0.3.0"
 
 [features]
 default = ["rt"]
